<resources>
    <string name="app_name">PatientApp</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_password">Enter password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="appointment_to_the_doctor">Запись</string>
    <string name="chat">Чат</string>
    <string name="exercises">Упражнения</string>
    <string name="analyzes">Анализы</string>
    <string name="profile">Профиль</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="family">Фамилия</string>

    <string name="title_activity_result_view">Результаты анализов</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="your_date">Ваша дата: </string>
    <string name="results_not_found">Результаты диагностики не обнаружены</string>
    <string name="exercises_not_found">Упражнения не обнаружены</string>
    <string name="e_mail_or_phone_txt">Телефон или E-mail</string>
    <string name="password_txt">Пароль</string>
    <string name="confirm_password_txt">Повторите пароль</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="preview">Preview</string>
    <string name="exit"><u>Выход</u></string>
    <string name="some_conclusion">     Some conclusion... Some conclusion... Some conclusion... Some conclusion... Some conclusion... Some conclusion... v v Some conclusion... Some conclusion... Some conclusion... Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion... Some conclusion...Some conclusion... Some conclusion... Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...v Some conclusion...Some conclusion...
 Some conclusion… Some conclusion...    Some conclusion... Some conclusion... Some conclusion... Some conclusion... Some conclusion... Some conclusion... v v Some conclusion... Some conclusion... Some conclusion... Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion... Some conclusion...Some conclusion... Some conclusion... Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...v Some conclusion...Some conclusion...
 Some conclusion… Some conclusion... Some   Some conclusion... Some conclusion... Some conclusion... Some conclusion... Some conclusion... Some conclusion... v v Some conclusion... Some conclusion... Some conclusion... Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion... Some conclusion...Some conclusion... Some conclusion... Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...v Some conclusion...Some conclusion...
 Some conclusion… Some conclusion... Some   Some conclusion... Some conclusion... Some conclusion... Some conclusion... Some conclusion... Some conclusion... v v Some conclusion... Some conclusion... Some conclusion... Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion... Some conclusion...Some conclusion... Some conclusion... Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...v Some conclusion...Some conclusion...
 Some conclusion… Some conclusion... Some   Some conclusion... Some conclusion... Some conclusion... Some conclusion... Some conclusion... Some conclusion... v v Some conclusion... Some conclusion... Some conclusion... Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion... Some conclusion...Some conclusion... Some conclusion... Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...v Some conclusion...Some conclusion...
 Some conclusion… Some conclusion... Some   Some conclusion... Some conclusion... Some conclusion... Some conclusion... Some conclusion... Some conclusion... v v Some conclusion... Some conclusion... Some conclusion... Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion... Some conclusion...Some conclusion... Some conclusion... Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...v Some conclusion...Some conclusion...
 Some conclusion… Some conclusion... SomeSome conclusion... Some conclusion... Some conclusion... Some conclusion... v v Some conclusion... Some conclusion... Some conclusion... Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion... Some conclusion...Some conclusion... Some conclusion... Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...Some conclusion...v Some conclusion...Some conclusion...</string>
</resources>
